header has finished

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -25,7 +25,7 @@ nav{
     align-items: center;
     justify-content: space-around;
 }
-img {
+.nav_item img {
     min-width: 28px;
     height: 28px;
 
@@ -38,5 +38,21 @@ align-self: center;
 
 /*Search*/
 .search{
+    display: flex;
     width: 278px;
+    align-items: center;
 }
+
+input {
+    border: 0;
+    padding: 14px;
+    border-radius: 14px 0 0 14px;
+    outline: none;
+}
+
+
+
+
+
+
+
